--- a/package.json
+++ b/package.json
@@ -40,49 +40,49 @@
     "@serverless/ui-components": "0.0.5",
     "auth0-lock": "10.2.1",
     "axios": "^0.13.1",
-    "classnames": "^2.2.5",
     "clipboard": "^1.5.16",
     "jwt-decode": "^2.1.0",
-    "localforage": "^1.4.3",
+    "localforage": "^1.7.2",
     "lodash.debounce": "^4.0.8",
     "phantomjs-prebuilt": "^2.1.16",
     "phenomic-serverless": "0.22.00",
-    "prop-types": "^15.5.10",
+    "postcss-selector-parser": "^5.0.0-rc.3",
+    "prop-types": "^15.6.2",
     "react": "^15.0.0",
     "react-auto-form": "^1.3.0",
     "react-dom": "^15.0.0",
     "react-google-analytics": "^0.2.0",
     "react-helmet": "^3.0.0",
-    "react-redux": "^4.4.1",
+    "react-redux": "^4.4.9",
     "react-router": "^2.3.0",
     "react-showdown": "^1.6.0",
     "react-svg-inline": "^1.1.0",
     "redux": "^3.0.0",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.0.0-beta.1",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx-self": "^6.11.0",
     "babel-plugin-transform-react-jsx-source": "^6.9.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
     "cheerio": "^0.22.0",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "color": "^0.11.1",
     "critical": "^0.8.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.7.7",
     "directory-tree": "^1.1.0",
     "download": "^5.0.2",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^6.4.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
@@ -92,7 +92,7 @@
     "gray-matter": "^2.0.2",
     "history": "^2.0.0",
     "install-github-dep": "0.0.2",
-    "invariant": "^2.1.1",
+    "invariant": "^2.2.4",
     "jade": "^1.11.0",
     "json-loader": "^0.5.2",
     "node-dir": "^0.1.16",
